--- a/courseapp/requirements.txt
+++ b/courseapp/requirements.txt
@@ -1,21 +1,47 @@
 asgiref==3.7.2
 certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.3
 cloudinary==1.39.1
+colorama==0.4.6
+cryptography==42.0.5
+distlib==0.3.6
 Django==5.0.2
 django-ckeditor==6.7.1
 django-debug-toolbar==4.3.0
 django-js-asset==2.2.0
+django-oauth-toolkit==2.3.0
 djangorestframework==3.15.1
 drf-yasg==1.21.7
+filelock==3.8.0
+Flask==2.2.2
+Flask-Admin==1.6.0
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
+idna==3.7
 inflection==0.5.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jwcrypto==1.5.6
+MarkupSafe==2.1.1
+oauthlib==3.2.2
 packaging==24.0
 pillow==10.2.0
+platformdirs==2.5.4
+pycparser==2.22
 PyMySQL==1.1.0
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
+SQLAlchemy==1.4.44
 sqlparse==0.4.4
 typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+virtualenv==20.17.0
+Werkzeug==2.2.2
+WTForms==3.0.1
